services/ambassador/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: aes-ambassador
                port:
                  name: http
